# immunisation-history-api

./: .flake8  .gitignore  .prettierrc  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: continuous-integration.yml  pr-lint.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/components/: run-e2e-tests.yml  run-sandbox-tests.yml  run-smoke-tests.yml
azure/templates/: run-ping-tests.yml  run-pytests.yml  run-sandbox-tests.yml  run-smoke-tests.yml  run-tests.yml
postman/: immunisation-history-sandbox.postman_collection.json
proxies/live/apiproxy/: ih.xml
proxies/live/apiproxy/policies/: AccessEntity.GetApp.xml  AssignMessage.AddAuthorisedTargetsHeader.xml  AssignMessage.AddClientIdHeader.xml  AssignMessage.AddCors.xml  AssignMessage.AddRequestUrl.xml  AssignMessage.AddRequestUrlHeader.xml  AssignMessage.AddUserIdHeader.xml  (+58 more)
proxies/sandbox/apiproxy/: ih.xml
sandbox/: Makefile  app.js  app.spec.js  handlers.js  index.js  package-lock.json  package.json
sandbox/api/: openapi.yaml
sandbox/fhir-responses/: covid-immunization.fhir.js  empty-immunization.fhir.js  hpv-immunization.fhir.js
sandbox/immunization-handler/: api-response.js  constants.js  date-range.js  index.js  operation-outcome.fhir.js  versioning.js
sandbox/immunization-handler/v1/: constants.js  date-range.js  handler.js
sandbox/immunization-handler/v2/: constants.js  handler.js
sandbox/logging/: index.js
sandbox/responses/: empty-bundle-response.json  error-response.json  get-imm-response.json
specification/: immunisation-history.yaml  immunization-history.yaml
specification/components/examples/: EmptyBundle.json  Immunization.json  OperationOutcome.json
specification/components/schemas/: Bundle.yaml  Immunization.yaml  OperationOutcome.yaml  Patient.yaml
tests/: Makefile  api_tests.py  conftest.py  pyproject.toml  pytest.ini  test_endpoints.py
tests/configuration/: environment.py
tests/feature-tests/: Pipfile  README.md  environment.py
tests/feature-tests/features/: api-tests.feature
tests/feature-tests/steps/: steps.py
tests/feature-tests/utils/: apigee.py  app.py  constants.py  logging.py  oauth.py  trace.py  utils.py
tests/feature_tests/: environment.py
tests/feature_tests/features/: api-test.feature  app-restricted.feature  user-restricted.feature
tests/feature_tests/steps/: steps.py
tests/feature_tests/utils/: apigee.py  app.py  constants.py  logging.py  oauth.py  trace.py  utils.py
(+24 files in other folders)
