[project]
python = "^3.8"

[tool.poetry]
name = "immunisation-history"
version = "0.0.1-alpha"
description = ""
authors = []
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/immunisation-history-api"
homepage = ""
keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.8"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.2-alpha/api_test_utils-1.1.2a0-py3-none-any.whl"}


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.2-alpha/api_test_utils-1.1.2a0-py3-none-any.whl"}
flake8 = "^3.7.9"
black = "^20.8b1"
pip-licenses = "^3.3.1"
jinja2 = "^2.11.1"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.0.5"


[tool.poetry.scripts]
