[project]
name = "immunisation-history"

[tool.poetry]
name = "immunisation-history"
version = "0.0.1-alpha"
description = ""
authors = []
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/immunisation-history-api"
homepage = ""
keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.8"
pytest-nhsd-apim = "^3.3.9"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.35-alpha/api_test_utils-1.1.35a0-py3-none-any.whl"}
flake8 = "^3.7.9"
pip-licenses = "^3.3.1"
jinja2 = "^2.11.1"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.30"
requests = "^2.27.1"
sh = "^1.14.3"
fire = "^0.4.0"
behave = "^1.2.6"

[tool.poetry.scripts]
