[project]
python = "^3.8"

[tool.poetry]
name = "immunisation-history"
version = "0.0.1-alpha"
description = ""
authors = ["Matthew Mercer <matt.mercer@nhs.net>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/immunisation-history-api"
homepage = ""
keywords = ["healthcare", "uk", "nhs"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.0.86-alpha/api_test_utils-1.0.86a0-py3-none-any.whl"}

[tool.poetry.scripts]
